mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restheart-mongo
  name: restheart-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restheart-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: restheart-mongo
    spec:
      containers:
        - args:
            - --auth
            - --replSet
            - rs0
          image: mongo:4.2
          name: restheart-mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: restheart-mongo-volume
      restartPolicy: Always
      volumes:
        - name: restheart-mongo-volume
          persistentVolumeClaim:
            claimName: restheart-mongo-volume
status: {}
