restheart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restheart
  name: restheart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restheart
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: restheart
    spec:
      containers:
        - name: restheart
          args:
            - --envFile
            - /opt/restheart/etc/restheart.properties
          image: softinstigate/restheart:latest          
          volumeMounts:
          - name: conf
            mountPath: /opt/restheart/etc/restheart.properties
            subPath: restheart.properties
          ports:
            - containerPort: 8080
      restartPolicy: Always
      volumes:
        - name: conf
          configMap:
            name: restheart-cm
            items:
            - key: restheart.properties
              path: restheart.properties
status: {}
