restheart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restheart-ingress
  annotations:
      #nginx.ingress.kubernetes.io/rewrite-target: /
      traefik.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - host: restheart.info
    http:
      paths:
      - path: /restheart
        pathType: Prefix
        backend:
          service:
            name: restheart
            port: 
              number: 8080
